fixed weird spacing on nav

--- a/LoveThemBackWebApp/LoveThemBackWebApp/wwwroot/StyleSheet.css
+++ b/LoveThemBackWebApp/LoveThemBackWebApp/wwwroot/StyleSheet.css
@@ -180,6 +180,7 @@ a.loginLink {
     overflow: hidden;
     background-color: rgb(0,128,128);
     vertical-align: middle;
+    height: 75px;
 }
 
 .nav-left {
@@ -216,6 +217,10 @@ a.loginLink {
     padding: 15px 15px;
     text-decoration: none;
     vertical-align: top;
+}
+
+.navigation li {
+    line-height: 37.5px;
 }
 
 li a:hover {
